# linux-log-watchdog

./: README.md  pyproject.toml  sample_patterns.json
linux_log_watchdog/: __init__.py  cli.py  watchdog.py
