[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-log-watchdog"
version = "0.1.0"
description = "A practical Linux log parser/watchdog for IT and infrastructure portfolios"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
dependencies = []

[project.scripts]
linux-log-watchdog = "linux_log_watchdog.cli:main"

[tool.setuptools]
packages = ["linux_log_watchdog"]
